Don't run PHPUnit or Behat tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,8 +41,8 @@ script:
   - moodle-plugin-ci phpcpd
   - moodle-plugin-ci phpmd
   - moodle-plugin-ci codechecker
-  - moodle-plugin-ci csslint
-  - moodle-plugin-ci shifter
-  - moodle-plugin-ci jshint
-  - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat
+  # - moodle-plugin-ci csslint
+  # - moodle-plugin-ci shifter
+  # - moodle-plugin-ci jshint
+  # - moodle-plugin-ci phpunit
+  # - moodle-plugin-ci behat
